--- a/Linear_Regression.ipynb
+++ b/Linear_Regression.ipynb
@@ -1,6 +1,46 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c24158e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1.1561e+19, 6.8794e+11, 2.7253e+20],\n",
+      "        [3.0866e+29, 1.1547e+19, 4.1988e+07]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "X = torch.Tensor(2,3)\n",
+    "print(X)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
